--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,7 +2,7 @@ node: NASA Project CI
 on:
   push:
     branches: [ master ]
-  pull_requet:
+  pull_request:
     branches: [ master ]
 jobs:
   build:
