--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,10 +21,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Use MongoDB from GitHub Actions
-        uses: supercharge/mongodb-github-action@1.9.0
+        uses: actions/setup-node@v3
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
-        uses: su
+        uses: supercharge/mongodb-github-action@1.9.0
       - run: npm install
       - run: npm run build --prefix client
       - run : npm test
