--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: use Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - name: Use MongoDB from GitHub Actions
