--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,11 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Use MongoDB from GitHub Actions
-        uses: actions/setup-node@v3
+      - name: Use MongoDB from GitHub actions
+        uses: supercharge/mongodb-github-action@1.9.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
-          uses: supercharge/mongodb-github-action@1.9.0
       - run: npm install
       - run: npm run build --prefix client
       - run : npm test
