--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "csv-parse": "^5.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^8.2.1",
+    "morgan": "^1.10.0",
     "pm2": "^5.3.0"
   },
   "devDependencies": {
